--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@ body {
     background-color: rgb(79, 196, 231);
 }
 
+h1 {
+    color: #fff;
+    margin-left: 48px;
+}
+
 .headerall {
     background-color: rgb(8, 89, 114);
     width: 100%;
